# PhotonDB

./: ARCHITECTURE_OVERVIEW.md  CLUSTER_DESIGN.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT.md  EXECUTION_PIPELINE.md  INDEXING_OVERVIEW.md  PHOTONDB_NAMING_GUIDE.md  PHOTONDB_QUERY_LANGUAGE_SPEC.md  PLUGIN_SYSTEM_OVERVIEW.md  QUERY_ENGINE_INTERNALS.md  README.md  RPC_PROTOCOL_DESIGN.md  SECURITY_MODEL.md  STORAGE_ENGINE_OVERVIEW.md  TIME_SERIES_ENGINE_DESIGN.md  Taskfile.yml  VECTOR_SEARCH_DESIGN.md  build.rs
docs/: CLI_IMPLEMENTATION.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_SETUP.md  GRAPHQL_STRATEGY.md  INDEX.md  NETWORK_IMPLEMENTATION.md  PACKAGING.md  README.md  V0.1_STATUS.md
docs/api/: http.md
docs/architecture/: Makefile  README.md  database_hierarchy.dot  database_hierarchy.md  database_hierarchy_simple.dot  storage_layout.dot
docs/clustering/: README.md
docs/security/: README.md
examples/: cli-workflow.sh
helm/: HELM_CHART.md
helm/rethinkdb/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-production.yaml  values.yaml
helm/rethinkdb/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
helm/rethinkdb/templates/tests/: test-connection.yaml
k8s/: README.md  rbac.yaml  statefulset.yaml  storage.yaml
logs/: rethinkdb.log.2025-12-09
packaging/: build_deb.sh  build_dmg.sh  build_msi.ps1  build_rpm.sh
proto/: README.md  handshake.capnp  query.capnp  response.capnp  term.capnp  types.capnp
src/: lib.rs
src/btree/: btree.rs  error.rs  mod.rs  node.rs  page.rs  pager.rs  types.rs  wal.rs
src/cluster/: discovery.rs  health.rs  k8s.rs  metrics.rs  mod.rs  scaling.rs
src/network/: auth.rs  connection.rs  mod.rs  protocol.rs  quic.rs  server.rs
src/plugin/: loader.rs  mod.rs  registry.rs  traits.rs
src/query/: compiler.rs  executor.rs  mod.rs
src/reql/: ast.rs  datum.rs  mod.rs  protocol.rs  terms.rs  types.rs
src/server/: database_handlers.rs  handlers.rs  internal.rs  middleware.rs  mod.rs  routes.rs  security.rs  websocket.rs
src/storage/: btree_storage.rs  database.rs  engine.rs  mock.rs  mod.rs
src/storage/slab/: allocator.rs  bench.rs  cache.rs  compression.rs  engine.rs  metadata.rs  mod.rs  production_tests.rs  size_class.rs  slot.rs  storage.rs
static/: admin.html
tests/: integration_network.rs  k8s_scaling_test.rs  query_execution_test.rs
