[package]
name = "photondb"
version = "3.0.0-alpha"
edition = "2021"
authors = ["Anton Feldmann <anton.feldmann@gmail.com>"]
description = "PhotonDB 1.0 - The Scientific Computing Database"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full", "tracing"] }
async-trait = "0.1.89"

# Web framework (replaces JavaScript server)
axum = { version = "0.7", features = ["tracing", "macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
capnp = { version = "0.23.0", features = ["std"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Storage - Slab allocator (Phase 1-5 complete)
# Performance - Phase 4
rayon = "1.10"       # Parallel writes
zstd = "0.13"        # Compression
lru = "0.12"         # LRU cache

# Logging & Tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.24"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Data structures
dashmap = "6.1.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Scientific Computing
nalgebra = "0.33"
ndarray = "0.16"
rustfft = "6.2"

# Statistics (Polars-like) - Optional due to vulnerable dependencies
polars = { version = "0.44", default-features = false, features = ["lazy", "sql", "dtype-full"], optional = true }
statrs = "0.17"

# Machine Learning
linfa = "0.7"

# Python integration (commented out due to version conflict with Polars)
# pyo3 = { version = "0.22", features = ["auto-initialize"] }
# TODO: Enable PyO3 when Polars updates to 0.22

# Configuration
toml = "0.8"
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }

# Utilities
libloading = "0.8"
parking_lot = "0.12"
bytes = "1.9"
base64 = "0.22"

# Security & Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

# QUIC Protocol (optional feature)
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.13", optional = true }

# Kubernetes Integration
kube = { version = "0.95", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# Prometheus Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
sysinfo = "0.32"

# Clustering & Replication (for future use)
# raft = "0.7"
# bincode = "1.3"

[build-dependencies]
capnp = "0.23.0"
capnpc = "0.23.2"

[features]
default = ["tcp"]
# Network transports
tcp = []
quic = ["quinn", "rcgen", "rustls"]
# Enable Polars support (has vulnerable dependencies: fast-float, pyo3)
# Use only if needed for DataFrame operations
polars-support = ["polars"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
